<resources>
    <string name="app_name">AlertMe</string>
    <string name="notes">Notes.</string>
    <string name="edit_note">Edit Note.</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add_note">Add Note.</string>
    <string name="track_your_time">Track Your Time</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="AlertMe">AlertMe</string>
    <string name="organize_and_track_your_tasks_easily">Organize and track your tasks easily!</string>
    <string name="get_started">Get Started</string>
    <string name="_2024_tasktracker_inc">© 2024 TaskTracker Inc.</string>
    <string name="task_name">Task Name</string>
    <string name="item_time">00:00:00</string>
    <string name="welcome_to_alert_me">Welcome to Alert Me</string>
    <string name="alertme">AlertMe</string>
</resources>